# video-capture-pipeline

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  config.toml.example  webcam-config.toml
include/: config.hpp  disk_monitor.hpp  encryptor.hpp  health.hpp  pipeline.hpp  utils.hpp
scripts/: create_loopback.sh  gen_key.sh  make_tmpfs.sh
src/: config.cpp  disk_monitor.cpp  encryptor.cpp  health.cpp  main.cpp  pipeline.cpp
tests/: CMakeLists.txt  test_config.cpp  test_disk_monitor.cpp  test_encryptor.cpp  test_pipeline_backpressure.cpp  test_pipeline_disconnect.cpp  test_pipeline_reconnect.cpp
tools/: vcpdecrypt.cpp
